Fix: QCheckbox vertical alignment

--- a/src/components/option-group/option-group.mat.styl
+++ b/src/components/option-group/option-group.mat.styl
@@ -1,6 +1,7 @@
 .q-option-inner
   display inline-block
   color $grey-5
+  line-height 0
 
   &.active
     color $primary
